--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rich-editor-monorepo",
+  "packageManager": "bun@1.2.15",
   "module": "index.ts",
   "type": "module",
   "private": true,
@@ -9,7 +10,8 @@
   ],
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "turbo": "^2.5.4"
   },
   "devDependencies": {
     "@types/bun": "latest",
