--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Clean up .npmrc
         run: rm ~/.npmrc
 
-  publish-nect-rich-input:
+  publish-next-rich-input:
     runs-on: ubuntu-latest
     defaults:
       run:
