--- a/packages/next-rich-editor/package.json
+++ b/packages/next-rich-editor/package.json
@@ -1,8 +1,18 @@
 {
   "name": "next-rich-editor",
+  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/amiry-jd/rich-editor"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
+  "author": "Javad Amiry",
+  "license": "MIT",
   "module": "src/index.ts",
   "type": "module",
-  "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
