--- a/packages/react-rich-editor/package.json
+++ b/packages/react-rich-editor/package.json
@@ -1,6 +1,16 @@
 {
   "name": "react-rich-editor",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/amiry-jd/rich-editor"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
+  "author": "Javad Amiry",
+  "license": "MIT",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
