--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rich-editor",
+  "description": "A monorepo featuring React‑ and Next‑based rich text editor packages, alongside demos.",
   "packageManager": "bun@1.2.15",
   "repository": {
     "type": "git",
