--- a/packages/react-rich-editor/package.json
+++ b/packages/react-rich-editor/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-rich-editor",
+  "description": "A lightweight, customizable rich‑text editor React component with extensible toolbar.",
   "version": "0.0.1",
   "repository": {
     "type": "git",
