--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - "v*"
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   publish-react-rich-input:
     runs-on: ubuntu-latest
@@ -25,41 +29,11 @@ jobs:
       - name: Build all packages
         run: bunx turbo run build
 
-      - name: Rename package-name for GitHub Packages
-        run: |
-          jq '.name = "@amiry-jd/react-rich-editor"' package.json > tmp.json && mv tmp.json package.json
-
-      - name: Configure npm for GitHub Packages
-        run: |
-          echo "@amiry-jd:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_PACKAGES_TOKEN }}" >> ~/.npmrc
-
-      - name: Check .npmrc
-        run: cat ~/.npmrc
-
-      - name: Publish to GitHub Packages
-        run: |
-          echo "NODE_AUTH_TOKEN is:"
-          echo $NODE_AUTH_TOKEN
-          npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
-
-      - name: Clean up .npmrc
-        run: rm ~/.npmrc
-
-      - name: Rename package-name for npm Packages
-        run: |
-          jq '.name = "react-rich-editor"' package.json > tmp.json && mv tmp.json package.json
-
       - name: Configure npm for npmjs packages
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
 
       - name: Publish to npm
-        run: |
-          echo "NODE_AUTH_TOKEN is:"
-          echo $NODE_AUTH_TOKEN
-          npm publish --access public
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
@@ -85,41 +59,11 @@ jobs:
       - name: Build all packages
         run: bunx turbo run build
 
-      - name: Rename package-name for GitHub Packages
-        run: |
-          jq '.name = "@amiry-jd/next-rich-editor"' package.json > tmp.json && mv tmp.json package.json
-
-      - name: Configure npm for GitHub Packages
-        run: |
-          echo "@amiry-jd:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_PACKAGES_TOKEN }}" >> ~/.npmrc
-
-      - name: Check .npmrc
-        run: cat ~/.npmrc
-
-      - name: Publish to GitHub Packages
-        run: |
-          echo "NODE_AUTH_TOKEN is:"
-          echo $NODE_AUTH_TOKEN
-          npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
-
-      - name: Clean up .npmrc
-        run: rm ~/.npmrc
-
-      - name: Rename package-name for npm Packages
-        run: |
-          jq '.name = "next-rich-editor"' package.json > tmp.json && mv tmp.json package.json
-
       - name: Configure npm for npmjs packages
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
 
       - name: Publish to npm
-        run: |
-          echo "NODE_AUTH_TOKEN is:"
-          echo $NODE_AUTH_TOKEN
-          npm publish --access public
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
