--- a/packages/next-rich-editor/package.json
+++ b/packages/next-rich-editor/package.json
@@ -1,5 +1,6 @@
 {
   "name": "next-rich-editor",
+  "version": "0.0.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/amiry-jd/rich-editor"
