--- a/packages/react-rich-editor/package.json
+++ b/packages/react-rich-editor/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-rich-editor",
   "description": "A lightweight, customizable rich‑text editor React component with extensible toolbar.",
+  "version": "0.0.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/amiry-jd/rich-editor"
