--- a/samples/react-usage-sample/package.json
+++ b/samples/react-usage-sample/package.json
@@ -11,7 +11,7 @@
     "start": "NODE_ENV=production bun src/index.tsx"
   },
   "dependencies": {
-    "react-rich-editor": "workspace:*"
+    "react-rich-input": "workspace:*"
   },
   "devDependencies": {}
 }
