--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,7 @@ jobs:
         run: rm ~/.npmrc
 
   publish-next-rich-input:
+    needs: publish-react-rich-input
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -55,10 +56,7 @@ jobs:
 
       - name: Change react-rich-input dependency to read from npmjs
         run: |
-          jq --arg ver "$(jq -r '.version' ../react-rich-input/package.json)" \                                                                    ─╯
-          '.dependencies["react-rich-input"] = $ver' \
-          package.json > tmp.json && \
-          mv tmp.json package.json
+          jq --arg ver "$(jq -r '.version' ../react-rich-input/package.json)" '.dependencies["react-rich-input"] = $ver' package.json > tmp.json && mv tmp.json package.json
 
       - name: Install dependencies
         run: bun install
